test/files/neg/symbol-literal-removal.scala
// scalac: -Xsource:2.14
//
abstract class Foo {
  val foo = 'TestSymbol
}
