test/files/neg/symbol-literal-removal.check
symbol-literal-removal.scala:4: error: symbol literal is unsupported; use sym"TestSymbol" instead
  val foo = 'TestSymbol
            ^
one error found
